--- a/benchmark/src/App.css
+++ b/benchmark/src/App.css
@@ -1,10 +1,20 @@
+html {
+    background-color: #282c34;
+}
+
+#root {
+    background-color: #282c34;
+    margin-bottom: 100px;
+}
+
 .App {
   text-align: center;
-  height: 100vh;
+  /* height: 100vh; */
+  background-color: #282c34;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
 }
 
