Cleaned up games page adding elements we will need for future

--- a/benchmark/src/App.css
+++ b/benchmark/src/App.css
@@ -49,6 +49,11 @@ html {
     margin-left: 10px;
     margin-right: 10px;
 }
+.vertical-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
 @keyframes App-logo-spin {
   from {
